--- a/web/package.json
+++ b/web/package.json
@@ -1,14 +1,17 @@
 {
   "name": "web",
   "version": "1.0.0",
-  "description": "",
+  "description": "Personal Site",
   "main": "index.js",
   "scripts": {
     "build": "npx @11ty/eleventy",
     "dev": "npx @11ty/eleventy --serve"
   },
   "keywords": [],
-  "author": "",
+  "author": {
+    "name": "Badr Choubai",
+    "email": "choubai.badr@protonmail.com"
+  },
   "license": "ISC",
   "devDependencies": {
     "@11ty/eleventy": "^2.0.1"
