--- a/www/package.json
+++ b/www/package.json
@@ -4,8 +4,9 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-		"serve": "npx @11ty/eleventy --serve",
 		"build": "npx @11ty/eleventy",
+		"lint": "npx prettier --write .",
+		"serve": "npx @11ty/eleventy --serve",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "keywords": [],
