Add generator CLI tool

--- a/www/package.json
+++ b/www/package.json
@@ -4,6 +4,7 @@
   "description": "",
   "main": "index.js",
   "scripts": {
+		"generate-post": "python3 generate.py",
     "build": "npx @11ty/eleventy",
     "lint": "npx prettier --write .",
     "serve": "npx @11ty/eleventy --serve",
